--- a/manifest.in
+++ b/manifest.in
@@ -26,7 +26,9 @@
         "description": "public"
       }
     ],
-    "ssh_key": true
+    "ssh_key": true,
+    "brand": "bhyve",
+    "bootrom": "uefi"
   },
   "users": [
     {
